# crdt

./: CHANGELOG.md  LICENSE  README.md  crdt.cabal  dist-chat.cabal  stack.yaml
src/: AntiEntropy.hs  DeltaCRDT.hs  LabeledSet.hs  NetworkUtil.hs
src-exe/: Main.hs
src-test/: DeltaCRDTSpec.hs  LesserActionSpec.hs  Main.hs  SemiLatticeActionSpec.hs
src/Algebra/: LesserAction.hs  SemiLatticeAction.hs
src/Data/: AckSet.hs  ChatData.hs  MultiAckSet.hs
