name:                dist-chat
version:             0.1.0.0
synopsis:            Distributed chat program
description:         Please see README.md

license:             ISC
license-file:        LICENSE
author:              Tom Jankauski
maintainer:          tomjankauski@gmail.com
copyright:           © 2016 Tom Jankauski
homepage:            https://github.com/blargg/dist-chat
bug-reports:         https://github.com/blargg/dist-chat/issues

category:            Communication
build-type:          Simple
stability:           alpha (experimental)
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

source-repository head
  type:     git
  location: https://github.com/blargg/dist-chat

library
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2
  hs-source-dirs:    src
  exposed-modules:   DeltaCRDT
                   , AntiEntropy
  other-modules:     Data.AckSet
                   , Data.MultiAckSet
  build-depends:     base >= 4.8 && < 5
                   , lattices >= 1.0
                   , containers >= 0.1
                   , QuickCheck >= 2.1
                   , hslogger >= 1.2
                   , bytestring >= 0.9
                   , network >= 2.6
                   , stm
                   , cereal >= 0.1
                   , universe >= 1.0
                   , TotalMap

executable dist-chat-exe
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-exe
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , dist-chat
                   , hslogger >= 1.2
                   , lattices
                   , stm

test-suite dist-chat-test
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-test
  main-is:           Main.hs
  other-modules:     DeltaCRDTSpec
  build-depends:     base >= 4.8 && < 5
                   , tasty >= 0.11
                   , tasty-hunit >= 0.9
                   , tasty-quickcheck >= 0.8
                   , lattices >= 1.0
                   , containers >= 0.1
                   , dist-chat

test-suite dist-chat-doctest
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-doctest
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , doctest >=0.10
                   , Glob >= 0.7
                   , QuickCheck >= 2.5
                   , dist-chat

benchmark dist-chat-benchmark
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-benchmark
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , criterion >= 1.1
                   , dist-chat
